Feature/food establishment (#2)
Task: https://www.notion.so/Create-API-for-creating-food-f5cdda99da5543ef87c6b24290b9a6a7?pvs=4

see openapi docs
